RESOLVED FIXED198988
[WHLSL] The checker needs to resolve types for the anonymous variables in ReadModifyWrite expressions
https://bugs.webkit.org/show_bug.cgi?id=198988
Summary [WHLSL] The checker needs to resolve types for the anonymous variables in Rea...
Saam Barati
Reported 2019-06-18 18:38:48 PDT
float4 x; x[1] += 20;
Attachments
patch (10.25 KB, patch)
2019-06-19 17:11 PDT, Saam Barati
dino: review+
patch for landing (10.28 KB, patch)
2019-06-19 18:23 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2019-06-19 11:55:50 PDT
Seems like it’s actually name resolution for types
Saam Barati
Comment 2 2019-06-19 16:44:52 PDT
patch forthcoming
Saam Barati
Comment 3 2019-06-19 17:11:26 PDT
EWS Watchlist
Comment 4 2019-06-19 17:14:09 PDT
Attachment 372501 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Dean Jackson
Comment 5 2019-06-19 17:24:26 PDT
Comment on attachment 372501 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=372501&action=review > Source/WebCore/ChangeLog:11 > + TAB!!!!!!! Security has been called.
Saam Barati
Comment 6 2019-06-19 17:48:02 PDT
(In reply to Dean Jackson from comment #5) > Comment on attachment 372501 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=372501&action=review > > > Source/WebCore/ChangeLog:11 > > + > > TAB!!!!!!! Security has been called. Vim likes to insert tabs when it auto indents changelog entries. It's super annoying. Thanks for the review.
Myles C. Maxfield
Comment 7 2019-06-19 17:49:26 PDT
r=me
Saam Barati
Comment 8 2019-06-19 18:23:18 PDT
Created attachment 372510 [details] patch for landing
WebKit Commit Bot
Comment 9 2019-06-19 19:05:34 PDT
Comment on attachment 372510 [details] patch for landing Clearing flags on attachment: 372510 Committed r246625: <https://trac.webkit.org/changeset/246625>
WebKit Commit Bot
Comment 10 2019-06-19 19:05:36 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11 2019-06-19 19:06:17 PDT
Note You need to log in before you can comment on or make changes to this bug.